[package]
description = "A futures-based dns client implementation"
documentation = "https://docs.rs/futures-dnsv2"
edition.workspace = true
license = "MIT"
name = "futures-dnsv2"
repository = "https://github.com/HalaOS/futures.git"
version.workspace = true

[dependencies]
thiserror = { workspace = true }
futures = { workspace = true }
futures-map = { workspace = true }
log = { workspace = true }
rasi = { workspace = true, optional = true }
hickory-proto = { workspace = true, optional = true, features = ["mdns"] }
socket2 = { workspace = true, optional = true, features = ["all"] }
rand = { workspace = true, optional = true }
spin = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
resolv-conf = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
ipconfig = { workspace = true, optional = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi = { workspace = true, features = ["task-futures"] }
rasi-mio = { workspace = true }
pretty_env_logger = { workspace = true }

[features]
default = ["rasi", "nslookup", "sysconf", "mdns"]
rasi = ["dep:rasi", "sysconf", "socket2"]
nslookup = ["hickory-proto"]
sysconf = ["resolv-conf", "ipconfig"]
mdns = ["rand", "spin", "uuid"]
